Unify trading records and drop legacy trade wrappers